# Bavarder

./: .gitignore  .woo  .woodpecker.yml  0001-remove-gpt4all-support.patch  Cargo.toml  README.md  SECURITY.md  SEEN.md  bavarder.doap  com.github.Bavarder.Bavarder.json  flake.nix  meson.build  meson_options.txt  pyproject.toml  r.txt  requirements.txt
.gitea/workflows/: build.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml
.github/workflows/: build.yml  codeql.yml  devskim.yml
build-aux/flatpak/: io.github.Bavarder.Bavarder.Devel.json  io.github.Bavarder.Bavarder.json  io.github.Bavarder.Bavarder.latest.json  pypi-dependencies.json
data/: bavarder.gresource.xml  com.github.Bavarder.Bavarder.appdata.xml.in  com.github.Bavarder.Bavarder.desktop.in  com.github.Bavarder.Bavarder.gschema.xml  io.github.Bavarder.Bavarder.appdata.xml.in  io.github.Bavarder.Bavarder.appdata.xml.in.in  io.github.Bavarder.Bavarder.desktop.in  io.github.Bavarder.Bavarder.desktop.in.in  io.github.Bavarder.Bavarder.gschema.xml  io.github.Bavarder.Bavarder.gschema.xml.in  meson.build  style.css
data/icons/: meson.build
data/ui/: help-overlay.blp  help-overlay.ui  meson.build  message_bubble.blp  preferences.blp  window.blp
po/: Bavarder.pot  LINGUAS  POTFILES  ar.po  arz.po  az.po  cs.po  de.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hu.po  it.po  kab.po  meson.build  nl.po  pl.po  pt.po  ru.po  sv.po  ta.po  th.po  tr.po  uk.po  update-pot.sh  zh_Hans.po  zh_Hant.po
snap/: bavarder.patch  snapcraft.yaml
src/: bavarder.gresource.xml  bavarder.in  constants.py.in  llm.py  main.py  meson.build  preferences.py  style-dark.css  style.css  threading.py  window.py
src/gtk/: help-overlay.blp
src/provider/: __init__.py  alpacalora.py  baichat.py  bard.py  base.py  catgpt.py  gradio.py  hfdialogpt.py  hfgoogleflant5xxl.py  hfgoogleflanu12.py  hfgpt2.py  hfgpt2large.py  hfgpt2xl.py  hfopenassistantsft1pythia12b.py  huggingchat.py  huggingchatbase.py  huggingface.py  meson.build  openai.py  openaicustom.py  openaigpt35turbo.py  openaigpt4.py  openaitextdavinci003.py  stablelm.py  starcoder.py  transformer.py
src/providers/: __init__.py  aihorde.py  alpacalora.py  analogdiffusion.py  baichat.py  base.py  basehfimage.py  baseimage.py  baseoffline.py  blenderbot.py  catgpt.py  dialogpt.py  googleflant5xxl.py  gpt2.py  gradio.py  hfbasechat.py  hfdialogpt.py  hfgoogleflant5xxl.py  hfgpt2large.py  hfopenassistantsft1pythia12b.py  huggingchat.py  huggingchatbase.py  litert_lm.py  local.py  meson.build  nitrodiffusion.py  openai.py  openaigpt35turbo.py  openaigpt4.py  openaiimage.py  openassistantsft1pythia12b.py  openjourney.py  petals.py  portraitplus.py  provider_item.blp  provider_item.py  robertasquad2.py  stablebeluga2.py  stablediffusion.py  stablelm.py
src/views/: about_window.py  chat_settings_dialog.blp  chat_settings_dialog.py  export_dialog.blp  export_dialog.py  main_window.py  meson.build  preferences_window.blp  preferences_window.py  save_dialog.blp  save_dialog.py  window.blp  window.py
src/widgets/: code_block.blp  code_block.py  download_row.blp  download_row.py  item.blp  item.py  marketplace_item.blp  marketplace_item.py  meson.build  message_bubble.py  model_item.blp  model_item.py  thread_item.blp  thread_item.py
