
providers_dir = join_paths(moduledir, 'provider')

providers_sources = [
  '__init__.py',
  'alpacalora.py',
  'baichat.py',
  'base.py',
  'catgpt.py',
  'hfgoogleflant5xxl.py',
  'huggingchat.py',
  'huggingface.py',
  'openai.py',
  'openaigpt4.py',
  'openaigpt35turbo.py',
  'openaitextdavinci003.py',
]

PY_INSTALLDIR.install_sources(providers_sources, subdir: providers_dir)
