providers_dir = join_paths(MODULE_DIR, 'providers')

providers_sources = [
  '__init__.py',
  'base.py',
  'blenderbot.py',
  'catgpt.py',
  'dialogpt.py',
  'googleflant5xxl.py',
  'gpt2.py',
  'hfbasechat.py',
  'openai.py',
  'openaigpt35turbo.py',
  'openaigpt4.py',
  'openassistantsft1pythia12b.py',
  'petals.py',
  'provider_item.py',
  'stablebeluga2.py',
  'robertasquad2.py',
]

PY_INSTALLDIR.install_sources(providers_sources, subdir: providers_dir)